compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/output.txt
error: supertypes of the following classes cannot be resolved. Please make sure you have the required dependencies in the classpath:
    class test.Sub, unresolved supertypes: test.Super

compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/source.kt:5:22: error: unresolved reference: foo
fun bar() = SubSub().foo()
                     ^
COMPILATION_ERROR
